feat(spring-boot,collections,concurrent): Spring Boot 深水区 4 篇 + Java 零碎 4 篇
新增 8 篇正文（2795 行）：
- spring-boot/starter.md        Starter 设计与自定义（两模块拆分、条件粒度、ApplicationContextRunner）
- spring-boot/configuration.md  配置体系（15 层优先级、profile、spring.config.import 反直觉语义、config tree）
- spring-boot/actuator.md       Actuator 与可观测（健康/探针/指标基数、自定义端点、Boot 4 包名迁移与 CVE-2026-40976）
- spring-boot/web-server.md     内嵌容器与请求进入（Tomcat 三参数、静态资源、错误转发、优雅停机、虚拟线程）
- collections/hashset.md        HashSet 去重原理（HashMap + PRESENT、equals/hashCode 双向契约）
- collections/treeset.md        TreeSet 与有序集合（compare==0 判重陷阱、NavigableSet 边界方法）
- collections/linkedhashmap.md  LinkedHashMap 与 LRU（三个回调钩子、LRU 实现、访问序副作用）
- concurrent/completable-future.md CompletableFuture 异步编排（回调执行线程三规则、异常三兄弟、allOf 语义）

配套改动：
- spring-boot/startup.md order 2 → 3（为 starter 腾位）
- auto-configuration.md 回补显式锚点 {#starter-structure} {#config-precedence}
- 重写 3 个导览页：spring-boot/index.md、collections/index.md、concurrent/index.md
- java/spring/index.md 同步篇数口径

校验：check_links.py → 192 文件 / 1090 页面链接 0 死链 / 408 锚点 0 未命中；npm run build 通过。